fix filters, tooltip word wrapping, data issues

--- a/web-map/style.css
+++ b/web-map/style.css
@@ -71,6 +71,7 @@ hr {
 .leaflet-tooltip {
   width: 230px;
   white-space: normal !important;
+  word-wrap: break-word;
 }
 
 /* Tooltip title */
@@ -78,7 +79,8 @@ hr {
   margin: 0;
   padding: 0;
   color: rgba(0,0,0,0.5);
-  font-size: 1em;
+  font-size: 1.5em;
+  max-width: fit-content;
 }
 
 .t-t:not(:first-child) {
